[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["Sergey <ssnovak@stud.kpfu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.5"
django-rest-swagger = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
